fixed an overflow issue in desktop title panel

--- a/styles/index.css
+++ b/styles/index.css
@@ -62,6 +62,11 @@
     font-weight: 100;
 }
 
+#intro > .intro-summary 
+{
+    overflow: hidden;
+}
+
 
 #intro > .intro-summary > .section-header
 {
